2005-04-17  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/config.py:
	* config_example.xml:
	Added encrypt and decrypt pieces for spool.

	* src/legacy/icqt.py:
	Fixed problems with nickname@icq.host being the jid.

2005-04-15  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Applied Jonas and Magnus's patches to add ICQ nickname support.

	* src/config.py:
	* src/legacy/glue.py:
	Added pieces for password-on-spool encryption.

	* src/jabw.py:
	* src/legacy/icqt.py:
	Backed down nick attribute from previous patch and used name instead.

2005-04-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/xmlconfig.py:
	Fixed misplaced output per type of config option.

	* config_example.xml:
	* src/main.py:
	Added check so people can choose to have no pid file.

2005-04-09  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Don't shutdown upon receiving limit.  Not the best fix yet, but
	better than a shutdown.

	* src/legacy/icqt.py:
	Fixed issue in difference between icq and aim messages.
	'Fixed' issue with unicode away messages.  Hides 'illegal' chars.

2005-04-06  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/oscar/tlib.py:
	Fixed lack of handling for channel 4 (old style) messages.

2005-04-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Fixed another xmlify bug regarding unicode vs non-unicode.

2005-04-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Fixed bug with xmlify not checking for string.

	* src/legacy/icqt.py:
	Fixed problem with variable being used that wasn't ever set.

2005-03-22  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/webadmin/.cvsignore:
	* src/tlib/jabber/.cvsignore:
	* src/tlib/.cvsignore:
	* src/legacy/.cvsignore:
	* src/.cvsignore:
	Removed legacy CVS files.

2005-03-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Added Martin von Loewis's xmlify function.

	* src/main.py: